--- a/index.html
+++ b/index.html
@@ -30,21 +30,9 @@
     </div>
     <div id="container_about">
         <H2>Sobre mim</H2>
-        <p>Olá! Meu nome é Fábio Araújo, tenho 23 anos e atualmente sou estudante de Sistemas de Informação na FIAP,
-            onde
-            estou cursando o primeiro semestre de um curso com duração de 4 anos. Antes disso, passei dois anos
-            estudando
-            Engenharia Computacional na UFJF, onde adquiri uma base sólida em lógica de programação e desenvolvimento de
-            sistemas.
-            Tenho um grande interesse por tecnologia, especialmente no desenvolvimento de software. Atualmente, estou
-            focado
-            em me tornar um desenvolvedor Fullstack, com uma forte paixão por Backend, mas também explorando o mundo do
-            Frontend com frameworks como Nuxt.js, Vue.js, React.js e Next.js.
-            Estou em busca de aprender sempre mais e aplicar meus conhecimentos em projetos práticos. O objetivo é
-            construir
-            sistemas escaláveis e eficientes, sempre com foco na qualidade e inovação. Além disso, estou sempre em busca
-            de
-            oportunidades para aprimorar minhas habilidades e contribuir em equipes de desenvolvimento.
+        <p>Sou Fábio Araújo, tenho 23 anos e estou no primeiro semestre de Sistemas de Informação na FIAP. Estudei por dois anos Engenharia Computacional na UFJF, onde desenvolvi uma base sólida em lógica e programação.
+
+            Atualmente, estou focado em me tornar um desenvolvedor Fullstack, com ênfase em backend. Tenho estudado HTML, CSS, JavaScript e frameworks como Nuxt.js, Vue, React e Next. Busco evoluir com projetos práticos e oportunidades reais no mundo da programação.
         </p>
     </div>
 
