feat: links bootstrap

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Fabio Araujo</title>
     <link rel="stylesheet" href="/src/css/styles.css">
+    <link rel="stylesheet" href="/src/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -61,6 +62,7 @@
     </div>
 
     <script src="/src/js/script.js"></script>
+    <script src="/src/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/d91b10c4f5.js" crossorigin="anonymous"></script>
 </body>
 
